# flask-smorest-todo

./: README.md  pyproject.toml
app/: __init__.py  config.py  schemas.py
app/models/: tasks.py
app/resources/: task.py
