[tool.poetry]
name = "flask-todo-api"
version = "0.1.0"
description = ""
authors = ["Kasulejoseph <kasule06joseph@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-smorest = "^0.42.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
